logout btn added

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
       Remember Me?
       <input type="checkbox" id="remember-me" name="remember-me" class="form-control">
     </p>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
   </form>
 </div>
 </body></html>
